# ldb

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  tmp  vcpkg.json
.cursor/rules/: cpp.mdc  visualization-rule.mdc
include/libldb/: BreakpointSite.h  Error.h  Parse.h  Pipe.h  Process.h  RegisterInfo.h  Registers.h  StoppointCollection.h  Types.h  bit.h  bit.hpp  breakpoint.hpp  breakpoint_site.hpp  disassembler.hpp  dwarf.hpp  elf.hpp  error.hpp  libldb.h  libldb.hpp  parse.hpp  pipe.hpp  process.hpp  register_info.hpp  registers.hpp  stack.hpp  stoppoint_collection.hpp  syscall.hpp  syscalls.hpp  target.hpp  types.h  types.hpp  watchpoint.hpp
include/libldb/detail/: Registers.inc  dwarf.h  register.inc  registers.inc  syscalls.inc
src/: BreakpointSite.cpp  CMakeLists.txt  Pipe.cpp  Process.cpp  Registers.cpp  breakpoint.cpp  breakpoint_site.cpp  disassembler.cpp  dwarf.cpp  elf.cpp  libldb.cpp  pipe.cpp  process.cpp  registers.cpp  stack.cpp  syscall.cpp  syscalls.cpp  target.cpp  types.cpp  watchpoint.cpp
src/include/: syscall.inc
test/: CMakeLists.txt  tests.cpp
test/targets/: CMakeLists.txt  RegRead.s  RegWrite.s  RunEndlessly.cpp  anti_debugger.cpp  hello_ldb.cpp  inline.cpp  memory.cpp  multi_cu_main.cpp  multi_cu_other.cpp  overloaded.cpp  reg_cal.s  reg_read.s  reg_write.s  run_endlessly.cpp  step.cpp
tools/: CMakeLists.txt  ldb.cpp
